welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: ')' expected but '<-' found.
	while(i<-0 to 5) { avance();  t[i]=t[i+1]; }
               ^Array1:8: error: illegal start of simple expression
}
^