welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var x:String=getCouleurSol() 
	var T = new Array[Color](6) 
	
	while(i<-0 to 5) { avance();  t[i]=t[i+1]; }
	
}
